[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/quiz.gd" id="1"]

[node name="Quiz" type="Control"]
script = ExtResource("1")
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
visible = false

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
spacing = 10.0

[node name="Question" type="Label" parent="Panel/VBoxContainer"]
autowrap_mode = 2
text = "Pregunta"

[node name="Options" type="VBoxContainer" parent="Panel/VBoxContainer"]
spacing = 6.0

[node name="OptionA" type="Button" parent="Panel/VBoxContainer/Options"]
text = "A"

[node name="OptionB" type="Button" parent="Panel/VBoxContainer/Options"]
text = "B"

[node name="OptionC" type="Button" parent="Panel/VBoxContainer/Options"]
text = "C"

[node name="OptionD" type="Button" parent="Panel/VBoxContainer/Options"]
text = "D"

[node name="Feedback" type="Label" parent="Panel/VBoxContainer"]
autowrap_mode = 2
text = ""

[node name="NextButton" type="Button" parent="Panel/VBoxContainer"]
text = "Siguiente"

[node name="FinishPanel" type="VBoxContainer" parent="Panel/VBoxContainer"]
visible = false
spacing = 6.0
alignment = 1

[node name="Summary" type="Label" parent="Panel/VBoxContainer/FinishPanel"]
autowrap_mode = 2
text = "Resumen"

[node name="ExitButton" type="Button" parent="Panel/VBoxContainer/FinishPanel"]
text = "Cerrar"
